# cmake

./: README.md  coverage.cmake  dependencies.cmake  testSupport.cmake  utilities.cmake
templates/: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.txt  conanfile_qt_minimal.txt  conanfile_qt_qml.txt  libraries.cmake  requirements.txt  requirments.txt
